# practiceCpp

./: README.md
binary search/: README.md  compile.sh  main.cpp  program.sh
bubble sort/: README.md  compile.sh  main.cpp  prog.sh
fifty values and stuff/: README.md  main.cpp  prog
insertion sort/: README.md  main.cpp  prog
io_uring_cat/: README.md  a.txt  b.txt  c.txt  cat_program  d.txt  main.cpp
menu and stuff/: README.md  main.cpp  prog
merge sort/: README.md  compile.sh  mergeSort.cpp  prog
quick sort/: README.md  compile.sh  main.cpp  prog.sh
readv_writev/: README.md  a.txt  b.txt  c.txt  lorem.txt  main.cpp  prog
xmake & meson/meson/: README.md
xmake & meson/meson/test/: main.cpp  meson.build
xmake & meson/meson/test_lib/: lib.cpp  lib.hpp  meson.build
xmake & meson/xmake/: README.md
xmake & meson/xmake/test/: xmake.lua
xmake & meson/xmake/test/src/: main.cpp
xmake & meson/xmake/test_lib/: xmake.lua
